--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "nothing to see over here",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1
+		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"author": "r1nzler_",
 	"licence": "MIT"
