--- a/api/package.json
+++ b/api/package.json
@@ -16,7 +16,8 @@
 		"express": "^4.16.4",
 		"jwt-simple": "^0.5.5",
 		"moment": "^2.22.2",
-		"mongoose": "^5.3.2"
+		"mongoose": "^5.3.2",
+		"mongoose-pagination": "^1.0.0"
 	},
 	"devDependencies": {
 		"eslint": "^5.6.1",
