--- a/api/package.json
+++ b/api/package.json
@@ -14,6 +14,7 @@
 		"body-parser": "^1.18.3",
 		"connect-multiparty": "^2.2.0",
 		"express": "^4.16.4",
+		"firebase-admin": "^6.1.0",
 		"jwt-simple": "^0.5.5",
 		"moment": "^2.22.2",
 		"mongoose": "^5.3.2",
