--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
     "rxjs": "~6.3.3",
+    "rxjs-compat": "^6.3.3",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
