--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.8",
     "@fortawesome/free-solid-svg-icons": "^5.5.0",
     "bootstrap": "^4.1.3",
+    "bootstrap-material-design": "^4.1.1",
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
     "rxjs": "~6.3.3",
