--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "@fortawesome/angular-fontawesome": "^0.3.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.8",
     "@fortawesome/free-solid-svg-icons": "^5.5.0",
+    "angular2-moment": "^1.9.0",
     "bootstrap": "^4.1.3",
     "bootstrap-material-design": "^4.1.1",
     "core-js": "^2.5.4",
