--- a/api/package.json
+++ b/api/package.json
@@ -11,20 +11,19 @@
 	"license": "MIT",
 	"dependencies": {
 		"@types/socket.io": "^2.1.2",
-		"bcrypt-nodejs": "0.0.3",
-		"body-parser": "^1.18.3",
+		"bcrypt-nodejs": "^0.0.3",
+		"body-parser": "^1.19.0",
 		"connect-multiparty": "^2.2.0",
-		"event-stream": "^3.3.4",
-		"express": "^4.16.4",
-		"firebase-admin": "^6.1.0",
-		"jwt-simple": "^0.5.5",
-		"moment": "^2.22.2",
-		"mongoose": "^5.3.2",
+		"event-stream": "^4.0.1",
+		"express": "^4.17.0",
+		"jwt-simple": "^0.5.6",
+		"moment": "^2.24.0",
+		"mongoose": "^5.5.10",
 		"mongoose-pagination": "^1.0.0",
 		"socket.io": "^2.2.0"
 	},
 	"devDependencies": {
-		"eslint": "^5.9.0",
-		"nodemon": "^1.18.4"
+		"eslint": "^5.16.0",
+		"nodemon": "^1.19.0"
 	}
 }
