--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "client",
-  "version": "0.0.0",
+  "version": "0.2.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -26,10 +26,10 @@
     "angular2-moment": "^1.9.0",
     "bootstrap": "^4.3.1",
     "bootstrap-material-design": "^4.1.1",
-    "core-js": "^3.1.0",
+    "core-js": "^2.5.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
-    "ng-zorro-antd": "^7.4.0",
+    "ng-zorro-antd": "^7.4.1",
     "rxjs": "^6.5.2",
     "rxjs-compat": "^6.5.2",
     "zone.js": "^0.9.1"
@@ -53,6 +53,6 @@
     "protractor": "^5.4.2",
     "ts-node": "^8.1.0",
     "tslint": "^5.16.0",
-    "typescript": "^3.4.5"
+    "typescript": "~3.1.1"
   }
 }
