--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
     "ng-zorro-antd": "^7.4.1",
+    "ngx-infinite-scroll": "^7.0.0",
     "rxjs": "^6.5.2",
     "rxjs-compat": "^6.5.2",
     "zone.js": "^0.9.1"
